[project]
name = "format-lora-stack"
description = "Simple node to convert lora_stack output into string to generate a1111-style lora strength output text, like <lora:name:0.69>. Used to include your Lora names from Lora Stack in text input-output nodes and so on."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/mobilehacker/ComfyUI_format-lora-stack"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_format-lora-stack"
Icon = ""
