# pyproject.toml
[project]
name = "format-lora-stack" # Unique identifier for your node. Immutable after creation.
description = "Node which translates lora_strack to string with a1111 usage scheme"
version = "0.1" # Custom Node version. Must be semantically versioned.
license = { file = "LICENSE.txt" }
dependencies  = [] # Filled in from requirements.txt

[project.urls]
Repository = "https://github.com/mobilehacker/ComfyUI_format-lora-stack"

[tool.comfy]
PublisherId = "applepie1337" # TODO (fill in Publisher ID from Comfy Registry Website).
DisplayName = "Format Lora Stack" # Display name for the Custom Node. Can be changed later.
Icon = "" # SVG, PNG, JPG or GIF (MAX. 800x400px)
